# observable-replay-lab

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  generate_logs.py  scenarios.yaml
cli/: __init__.py  run.py
docs/: design_notes.md  overview.md
examples/: minimal_run.md
experiments/: __init__.py  audit_repo.py  reproduce.py
paper/: Metrology-Theoretic Epistemics Engine.tex  Sovereign Takeoff Engine.tex
ref_impl/: __init__.py  common.py  metrics.py  mte_core.py  replay.py  ste_sim.py
results/: .gitignore
schemas/: audit_report.schema.json  log_event.schema.json  metrics.schema.json  results.schema.json
spec/: glossary.md  log_format.yaml  metrics.yaml  mte_epistemics_spec.yaml  paper_alignment.yaml  repo_manifest.json  ste_gate_spec.yaml
tests/: test_audit.py  test_determinism.py  test_metrics.py  test_schema_validation.py
