[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observable-replay-lab"
version = "0.1.0"
description = "Observable-only deterministic replay MRI for STE/MTE minimal experiments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "K. Takahashi" }
]
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "jsonschema>=4.20"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ref_impl*", "bench*", "experiments*", "cli*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
